create uml diagrams, implement service

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,7 @@
 springBootVersion=3.2.2
 springDependencyManagementVersion=1.1.4
+springValidationVersion=3.2.2
+
 flywaydbVersion=10.6.0
 postgresqlVersion=42.7.1
 r2dbcPostgresqlVersion=1.0.4.RELEASE
