--- a/build.gradle
+++ b/build.gradle
@@ -22,9 +22,11 @@ repositories {
 }
 
 dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	implementation "org.springframework.boot:spring-boot-starter-validation:$springValidationVersion"
 
 	// db
 	implementation 'org.springframework:spring-jdbc'
