implement create transaction top up

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,13 @@
+javaVersion=21
 springBootVersion=3.2.2
 springDependencyManagementVersion=1.1.4
 springValidationVersion=3.2.2
 
+flywayCoreVersion=10.1.0
 flywaydbVersion=10.1.0
 postgresqlVersion=42.7.1
 r2dbcPostgresqlVersion=1.0.4.RELEASE
 testContainersPostgresqlVersion=1.19.3
 mapstructVersion=1.5.5.Final
 lombokVersion=1.18.30
+openApiVersion=2.0.2
