--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ group = 'com.askfar'
 version = '0.0.1-SNAPSHOT'
 
 java {
-    sourceCompatibility = '21'
+    sourceCompatibility = "$javaVersion"
 }
 
 configurations {
@@ -24,14 +24,13 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
-    // implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation "org.springframework.boot:spring-boot-starter-validation:$springValidationVersion"
 
     // db
     implementation 'org.springframework:spring-jdbc'
-    implementation "org.flywaydb:flyway-core:$flywaydbVersion"
-    runtimeOnly 'org.flywaydb:flyway-database-postgresql:10.6.0'
+    implementation "org.flywaydb:flyway-core:$flywayCoreVersion"
+    runtimeOnly "org.flywaydb:flyway-database-postgresql:$flywaydbVersion"
     implementation "org.postgresql:postgresql:$postgresqlVersion"
     runtimeOnly "org.postgresql:r2dbc-postgresql:$r2dbcPostgresqlVersion"
 
@@ -51,7 +50,8 @@ dependencies {
     implementation "org.mapstruct:mapstruct:$mapstructVersion"
     annotationProcessor "org.mapstruct:mapstruct-processor:$mapstructVersion"
 
-    implementation 'io.swagger.core.v3:swagger-annotations:2.2.20'
+    // open api
+    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:$openApiVersion"
 }
 
 tasks.named('test') {
