--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation "org.springframework.boot:spring-boot-starter-validation:$springValidationVersion"
+    implementation "org.springframework.retry:spring-retry:$springRetryVersion"
+    implementation "org.springframework.boot:spring-boot-starter-aop:$springAopStarterVersion"
 
     // db
     implementation 'org.springframework:spring-jdbc'
