--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,8 @@ javaVersion=21
 springBootVersion=3.2.2
 springDependencyManagementVersion=1.1.4
 springValidationVersion=3.2.2
+springRetryVersion=2.0.5
+springAopStarterVersion=3.2.2
 
 flywayCoreVersion=10.1.0
 flywaydbVersion=10.1.0
