--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,7 @@ dependencies {
     testImplementation 'org.testcontainers:r2dbc'
     testImplementation 'org.springframework.boot:spring-boot-testcontainers'
     testImplementation 'io.projectreactor:reactor-test'
-    testImplementation 'org.springframework.security:spring-security-test'
+    testImplementation 'org.assertj:assertj-core:3.25.2'
 
     // utils
     compileOnly "org.projectlombok:lombok:$lombokVersion"
