--- a/gradle.properties
+++ b/gradle.properties
@@ -13,3 +13,4 @@ testContainersPostgresqlVersion=1.19.3
 mapstructVersion=1.5.5.Final
 lombokVersion=1.18.30
 openApiVersion=2.0.2
+assertjCoreVersion=3.25.2
